dev/styles/main.scss
/* ... */
input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}button[disabled],input[disabled]{cursor:default;}input[type=checkbox],input[type=radio]{box-sizing:border-box;padding:0;}input[type=search]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box;}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none;}textarea{overflow:auto;vertical-align:top;}table{border-collapse:collapse;border-spacing:0;}body,figure{margin:0;}legend,button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0;}

*,
*:before,
*:after {
	box-sizing: border-box;
	-moz-border-box: box-sizing;
	-webkit-border-box: box-sizing;
}

@import '_mixins';
@import '_colours'; // Better Colours
@import '_grid'; // Better Colours

// Specify the number of columns and set column and gutter widths
$columns: 12;
$column-width: 60;
$gutter-width: 15;

// Remove the definition below for a pixel-based layout
$total-width: 100%;

/* ---------------------------
Fonts are located in dist/css/fonts bro
------------------------------ */
@include importfont('Montserrat Regular', 'fonts/Montserrat-Regular', 400);
@include importfont('Quicksand Bold', 'fonts/Quicksand-Bold', 700);

// **********************
// Set Variables Here
//***********************
$basefontsize: 12px;
$baselineheight: 1.5;
$basefontcolour: #333;
$basefontfamily: "Montserrat Regular", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
$headingsfontfamily: "Quicksand Bold", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
$linkcolour: #0074D9;

body {
	height: 100%;
	color: #333;
  font-weight: 300;
	font-size: $basefontsize;
	font-family: $basefontfamily;
	line-height:1.2em;

}

// Headings
// -------------------------
h1, h2, h3, h4, h5, h6, p, ul {
	-webkit-margin-before:0em;
	-webkit-margin-after:0em;
}

h1, h2, h3, h5, h6 {
	margin: 0;
	padding: 0;
	text-transform: uppercase;
  font-weight: 100;
	font-family: $headingsfontfamily;
	text-rendering: optimizelegibility; // Fix the character spacing for headings
	a {
		color: $basefontcolour;
	}
}

h1 {
	@include fontbase(28px);
}

h2 {
	@include fontbase(24px);
	text-align:center;
}

h3 {
	@include fontbase(21px);
	text-align:center;
}

h4 {
	@include fontbase(18px);
}

h5 {
	@include fontbase(16px);
	width:267px;
	position: relative;
	top:44px;
	left:10px;
}

// General Typography
// -------------------------
p {
	@include fontbase(12px);
}

a {
	color: $linkcolour;
	text-decoration: none;
}

// Lists
// --------------------------------------------------

// Unordered and Ordered lists
ul, ol {
	margin: 0;
	padding: 0;
}

ul ul,
ul ol,
ol ol,
ol ul {
	margin-bottom: 0;
}

// **********************
// All Styles Go Below Here Bud
//***********************

//
//HEADER//
//

.header.menu {
	position: fixed;
	width:100%;
	height:100%;
	top:0;
	left:0;
	background:$TLred;
	z-index:10;
	overflow-y: scroll;
	opacity:0;
	visibility:hidden;
	transition:opacity .3s,visibility 0s .3s;
	z-index:9999;
}

.logo {
	max-height:35px;
	max-width:150px;
	float:left;
	position: absolute;
	top:28%;
	left:3%;
}

svg.toggle {
	position: relative;
	bottom:9px;
	display:none;
}

.header button.btn-menu {
	right:15px;
	opacity:1;
	visibility:visible;
	position: fixed;
	top:5px;
	border:none;
	outline:0;
	z-index:20;
	cursor:pointer;
	background-color:transparent;
	background-repeat:no-repeat;
	background-position:center center;
}

button.subscribe {
	text-align:center;
}

div.menu nav ul li a {
	display:inline;
	float:right;
	padding:0;
	text-align:center;
	margin:1.25rem 1.375rem;
	font-size:1rem;
	text-decoration:none;
	color:gray;
	text-transform:uppercase;
	font-size:13px;
}

h1.logo {
	display:inline-block;
	float:left;
}

ul.nav {
	position: absolute;
	top:2%;
	right:2%;
}

header {
	padding:10px;
	margin:0;
	width:100%;
	background:white;
	float:left;
	position:fixed;
	border-bottom:solid $TLred 4.7px;
	z-index:9999;
	margin-bottom:100px;
}

section {
	border-bottom: 1px solid #e0e0e0;
	padding: 2%;
}

section#seo {
	margin-top:88px;
;
}

div.wrapper {
	width:1080px;
	margin:0 auto;
	text-align:left;
	display:inline-block;
}

//
// TABS
//

.wrap {
  margin: 0 auto;
  position: relative;
  top:-34px;
  margin:0 auto;
  text-align:center;
  width:87%;
}

ul.tabs.group {
	// width:390px;
	width:100%;
	height:80px;
	margin:0 auto;
	list-style:none;
	overflow:hidden;
	padding:0;
	position:relative;
	left:14px;
	top:10px;
}
ul.tabs li {
	float:left;
	width:72px;
}

ul.tabs li a {
	position: relative;
	display: block;
	height: 30px;
	margin-top: 40px;
	padding: 10px 0 0 0;
	font-family: 'Open Sans', sans-serif;
	font-size: 18px;
	text-align: center;	
	text-decoration: none;
	color: #ffffff;
	background: #6edeef;
	// -webkit-box-shadow: 8px 12px 25px 2px rgba(0,0,0,0.4);
	//    -moz-box-shadow: 8px 12px 25px 2px rgba(0,0,0,0.4);
	//         box-shadow: 8px 12px 25px 2px rgba(0,0,0,0.4);
	//         	border: 0px solid #000000;
	-webkit-transition: padding 0.2s ease, margin 0.2s ease;
       -moz-transition: padding 0.2s ease, margin 0.2s ease;
         -o-transition: padding 0.2s ease, margin 0.2s ease;
        -ms-transition: padding 0.2s ease, margin 0.2s ease;
            transition: padding 0.2s ease, margin 0.2s ease;
}
.tabs li:first-child a {
	z-index: 3;
  -webkit-border-top-left-radius: 8px;
-moz-border-radius-topleft: 8px;
border-top-left-radius: 8px;
}
.tabs li:nth-child(2) a {
	z-index: 2;
}
.tabs li:last-child a {
	z-index: 1;
  -webkit-box-shadow: 2px 8px 25px -2px rgba(0,0,0,0.3);
	   -moz-box-shadow: 2px 8px 25px -2px rgba(0,0,0,0.3);
	        box-shadow: 2px 8px 25px -2px rgba(0,0,0,0.3);
  -webkit-border-top-right-radius: 8px;
-moz-border-radius-topright: 8px;
border-top-right-radius: 8px;
}
/* ... */

